Adding comments detailing usage;  Adding gradle target for fat jar